testCases/semanticAnalyzerTestCases/error/usingLibraryFunctions.cs16

/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/


int main(void){
    int x;
    readint();
    x := readbool();

    writebool();
    writebool(x);
    x := writebool(false);
    writebool(true);



    writeint(true);
    writeint(false);
    writeint(1);

    return 1;
}

